wk_taa_taaqa/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Axcess_Document_Flag__c</fullName>
        <formula>Has_Axcess_Document__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Axcess Document Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Axcess_Document_Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Axcess Document Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Axcess_Document_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Axcess Document Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Axcess_Portal_Flag__c</fullName>
        <formula>Has_Portal_SaaS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Axcess Portal Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Axcess_Portal_Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Axcess Portal Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Axcess_Practice_Flag__c</fullName>
        <formula>Has_Axcess_Practice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Axcess Practice Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Axcess_Practice_Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Axcess Practice Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Axcess_Practice_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Axcess Practice Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Axcess_Tax_Competitor_End_Date__c</fullName>
        <label>Axcess Tax Competitor End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Axcess_Tax_Flag__c</fullName>
        <formula>Has_Axcess_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Axcess Tax Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Axcess_Tax_Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Axcess Tax Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Axcess_Tax_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Axcess Tax Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Axcess_Workstream_Competitor__c</fullName>
        <label>Axcess Workstream Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACT!</fullName>
                </value>
                <value>
                    <fullName>DataEase</fullName>
                </value>
                <value>
                    <fullName>Excel</fullName>
                </value>
                <value>
                    <fullName>File In Time</fullName>
                </value>
                <value>
                    <fullName>Firm Flow</fullName>
                </value>
                <value>
                    <fullName>FirmWorks</fullName>
                </value>
                <value>
                    <fullName>Included in Practice Management</fullName>
                </value>
                <value>
                    <fullName>Junxure</fullName>
                </value>
                <value>
                    <fullName>MS Outlook</fullName>
                </value>
                <value>
                    <fullName>MS Project</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>PFX Engagement Plus</fullName>
                </value>
                <value>
                    <fullName>PPC Tracker</fullName>
                </value>
                <value>
                    <fullName>ProSystem fx Practice</fullName>
                </value>
                <value>
                    <fullName>Routing Slips</fullName>
                </value>
                <value>
                    <fullName>Tax Program</fullName>
                </value>
                <value>
                    <fullName>VPM Tracker</fullName>
                </value>
                <value>
                    <fullName>Workstream</fullName>
                </value>
                <value>
                    <fullName>XCM</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Axcess_Workstream_Flag__c</fullName>
        <formula>Has_Axcess_Workstream__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Axcess Workstream Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Axcess_Workstream_Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Axcess Workstream Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Axcess_Workstream_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Axcess Workstream Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BUSINESS_PARTNER_NUMBER__c</fullName>
        <label>Business Partner Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Products__c</fullName>
        <inlineHelpText>Determine if they are in financial services and also sell bank products.</inlineHelpText>
        <label>Bank Products</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Mix__c</fullName>
        <inlineHelpText>Tax Focus: tax compliance and advisory services, very little/no audit work, may do some business accounting.   

Full Service: significant accounting and audit work, and tax compliance and advisory services.</inlineHelpText>
        <label>Service Mix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tax Focused</fullName>
                </value>
                <value>
                    <fullName>Full Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCH_Audit_Accelerator_Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>DO NOT call this account regarding CCH® Audit Accelerator.</inlineHelpText>
        <label>CCH® Audit Accelerator Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CONSULT_CFO_WORK_PERCENT_GTRTEN_c__c</fullName>
        <inlineHelpText>Determine their focus on Tax Returns vs. Consulting or CFO work.</inlineHelpText>
        <label>&gt;10% Consulting/CFO Work</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPA_Led__c</fullName>
        <inlineHelpText>Firm is led by a CPA or enrolled agents.</inlineHelpText>
        <label>CPA Led</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CUSTID__c</fullName>
        <externalId>true</externalId>
        <label>Enterprise Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Came_from_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used only during lead mapping from conversion to indicate which accounts were created from lead conversion.</description>
        <label>Came from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliance_Services_Total__c</fullName>
        <label>Compliance Services Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContactCallURL1__c</fullName>
        <formula>&quot;/00T/e?title=Call&amp;who_id=&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContactCallURL1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactCallURL2__c</fullName>
        <formula>&quot;&amp;Followup=1&amp;tsk5=Call&amp;tsk3_lkid=&quot;&amp;Id&amp;&quot;&amp;tsk3=&quot;&amp;Name&amp;&quot;&amp;tsk12=Completed&amp;retURL=%2F&quot;&amp;Id&amp;&quot;&amp;target=_Blank&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContactCallURL2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Expiration_Date__c</fullName>
        <label>Contract Expiration Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Core_Relationship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Core Relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corp_Direct__c</fullName>
        <label>Corp Direct DTN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corp_Filer_Type__c</fullName>
        <label>Corp Filer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calendar</fullName>
                </value>
                <value>
                    <fullName>Fiscal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corp_Indirect__c</fullName>
        <label>Corp Indirect DTN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corp_Software_Retention_Owner__c</fullName>
        <formula>IF( Named_Account__c , &quot;&quot;,
	IF( Corporate_Segment__c , &quot;Corporate Software&quot;, &quot;&quot;)
)</formula>
        <label>Corp Software Retention Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corp_Sofware_NamedAccount_type__c</fullName>
        <label>Corporate Software Named Account type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SAP &amp; NetSuite</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>Telco &amp; Energy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corporate_Segment__c</fullName>
        <formula>IF( ISPICKVAL( Market_Segment__c , &quot;Banks and Financial Institutions&quot;) || (ISPICKVAL( Market_Segment__c , &quot;Consultants&quot;) || (ISPICKVAL( Market_Segment__c , &quot;General Corporate&quot;) || (ISPICKVAL( Market_Segment__c , &quot;Hospital and Payers&quot;) || (ISPICKVAL( Market_Segment__c , &quot;Insurance Companies&quot;) || (ISPICKVAL( Market_Segment__c , &quot;Tax Exempt and Membership Organizations&quot;)))))) , true, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corporate Segment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Software_New_Sales__c</fullName>
        <formula>IF( Named_Account__c , &quot;&quot;,
	IF( Corporate_Segment__c , &quot;Corporate Software&quot;, &quot;&quot;)
)</formula>
        <label>Corporate Software New Sales</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Business_Model__c</fullName>
        <label>Current Business Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Big 4 Acctg Firm (e.g. PWC, KPMG etc)</fullName>
                </value>
                <value>
                    <fullName>Combination</fullName>
                </value>
                <value>
                    <fullName>EY Outsource</fullName>
                </value>
                <value>
                    <fullName>Internal Tax Department</fullName>
                </value>
                <value>
                    <fullName>Internal - using third party software</fullName>
                </value>
                <value>
                    <fullName>Internal - using trust accounting system software</fullName>
                </value>
                <value>
                    <fullName>Local CPA</fullName>
                </value>
                <value>
                    <fullName>Other Outsource</fullName>
                </value>
                <value>
                    <fullName>Thomson Outsource</fullName>
                </value>
                <value>
                    <fullName>Trust US</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Software_revenue__c</fullName>
        <label>Current Software Revenue</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Segmentation__c</fullName>
        <label>Customer Segmentation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Established</fullName>
                </value>
                <value>
                    <fullName>Full Service Traditionalist</fullName>
                </value>
                <value>
                    <fullName>Professionalized</fullName>
                </value>
                <value>
                    <fullName>Progressive</fullName>
                </value>
                <value>
                    <fullName>Tax-Focused Traditionalist</fullName>
                </value>
                <value>
                    <fullName>Mom and Pop Shop</fullName>
                </value>
                <value>
                    <fullName>Small Tax Shop 1</fullName>
                </value>
                <value>
                    <fullName>Small Tax Shop 2+</fullName>
                </value>
                <value>
                    <fullName>Intermediate Tax Shop</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DEV__c</fullName>
        <label>DEV</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTN_Makeup__c</fullName>
        <label>DTN Makeup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Account Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Industry,&quot;&quot;),&quot;Industry, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(BillingCity) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Type,&quot;&quot;), &quot;Type&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Industry,&quot;&quot;), 0,20) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,20) + IF( LEN(BillingCity) = 0, 0,20) + IF(LEN(Phone) = 0, 0,20) + IF( ISPICKVAL(Type,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Database_Lookup_RADAR_Total__c</fullName>
        <label>Database Lookup RADAR Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Document_Competitor_End_Date__c</fullName>
        <label>Document Competitor End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Competitor__c</fullName>
        <label>Document Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acct1st</fullName>
                </value>
                <value>
                    <fullName>Adobe PDF</fullName>
                </value>
                <value>
                    <fullName>Cabinet NG</fullName>
                </value>
                <value>
                    <fullName>Caseware</fullName>
                </value>
                <value>
                    <fullName>CorpSystem Workpaper Manager</fullName>
                </value>
                <value>
                    <fullName>CPAS File Cabinet</fullName>
                </value>
                <value>
                    <fullName>CSI File Cabinet Solutions</fullName>
                </value>
                <value>
                    <fullName>CSI GoSystems Client</fullName>
                </value>
                <value>
                    <fullName>Datafaction</fullName>
                </value>
                <value>
                    <fullName>Doc-It</fullName>
                </value>
                <value>
                    <fullName>DocSTAR</fullName>
                </value>
                <value>
                    <fullName>DocuLex</fullName>
                </value>
                <value>
                    <fullName>Document Locator</fullName>
                </value>
                <value>
                    <fullName>DocuWare</fullName>
                </value>
                <value>
                    <fullName>eFile Cabinet</fullName>
                </value>
                <value>
                    <fullName>Engagement CS</fullName>
                </value>
                <value>
                    <fullName>File Magic - Westbrook Technologies</fullName>
                </value>
                <value>
                    <fullName>Go File Room - Immediatech</fullName>
                </value>
                <value>
                    <fullName>Hummingbird Enterprise</fullName>
                </value>
                <value>
                    <fullName>iChannel</fullName>
                </value>
                <value>
                    <fullName>Imanage</fullName>
                </value>
                <value>
                    <fullName>Inacct</fullName>
                </value>
                <value>
                    <fullName>Interwoven</fullName>
                </value>
                <value>
                    <fullName>Intuit WorkSpace Pro</fullName>
                </value>
                <value>
                    <fullName>Lacerte Document Management System</fullName>
                </value>
                <value>
                    <fullName>Laserfiche</fullName>
                </value>
                <value>
                    <fullName>Lotus Notes</fullName>
                </value>
                <value>
                    <fullName>McGladrey &amp; Pullen</fullName>
                </value>
                <value>
                    <fullName>Miller Engagement</fullName>
                </value>
                <value>
                    <fullName>MS Binder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Foundation_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Document Foundation Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Document_On_Premise_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Document On Premise Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ERO_1040__c</fullName>
        <label>ERO-1040</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERO_1041__c</fullName>
        <label>ERO-1041</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERO_1065__c</fullName>
        <label>ERO-1065</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERO_EFFDT__c</fullName>
        <label>ERO-EFFDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ERP_Technology__c</fullName>
        <label>ERP Technology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>NetSuite</fullName>
                </value>
                <value>
                    <fullName>Sage</fullName>
                </value>
                <value>
                    <fullName>Quickbooks</fullName>
                </value>
                <value>
                    <fullName>Telecom</fullName>
                </value>
                <value>
                    <fullName>Utility</fullName>
                </value>
                <value>
                    <fullName>Misc DB or Lookup</fullName>
                </value>
                <value>
                    <fullName>3DCart Shopping Cart Software</fullName>
                </value>
                <value>
                    <fullName>AbleCommerce.com</fullName>
                </value>
                <value>
                    <fullName>ADP</fullName>
                </value>
                <value>
                    <fullName>Advent Business Systems, Inc.</fullName>
                </value>
                <value>
                    <fullName>AIRS Software</fullName>
                </value>
                <value>
                    <fullName>Apparel Business Solutions</fullName>
                </value>
                <value>
                    <fullName>A-SALT Group</fullName>
                </value>
                <value>
                    <fullName>ASI Computers</fullName>
                </value>
                <value>
                    <fullName>BravePoint</fullName>
                </value>
                <value>
                    <fullName>Brookline Technologies</fullName>
                </value>
                <value>
                    <fullName>Business &amp; Decision</fullName>
                </value>
                <value>
                    <fullName>Buttonwood Technology Group</fullName>
                </value>
                <value>
                    <fullName>By Design</fullName>
                </value>
                <value>
                    <fullName>Communications Data Group</fullName>
                </value>
                <value>
                    <fullName>Conversant</fullName>
                </value>
                <value>
                    <fullName>Convio</fullName>
                </value>
                <value>
                    <fullName>Cowlitz River Software</fullName>
                </value>
                <value>
                    <fullName>Crowdhut</fullName>
                </value>
                <value>
                    <fullName>Data Paradigm</fullName>
                </value>
                <value>
                    <fullName>Demand Bridge</fullName>
                </value>
                <value>
                    <fullName>Display the Ecommerce Solution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ERP_Vendor_Account1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ERP Vendor Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.ERP_Vendor_Account_Flag__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Platform</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ERP_Vendor_Account_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ERP Vendor Account Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E_Commerce_Technology__c</fullName>
        <label>E-Commerce Technology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3D Cart</fullName>
                </value>
                <value>
                    <fullName>American Eagle</fullName>
                </value>
                <value>
                    <fullName>Avensia</fullName>
                </value>
                <value>
                    <fullName>Big Commerce</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Demandware</fullName>
                </value>
                <value>
                    <fullName>Digital River</fullName>
                </value>
                <value>
                    <fullName>Elastic Path</fullName>
                </value>
                <value>
                    <fullName>IBM Websphere</fullName>
                </value>
                <value>
                    <fullName>Intershop</fullName>
                </value>
                <value>
                    <fullName>JDA</fullName>
                </value>
                <value>
                    <fullName>Magento Community</fullName>
                </value>
                <value>
                    <fullName>Magento Enterprise 1.X</fullName>
                </value>
                <value>
                    <fullName>Magento Enterprise 2.x</fullName>
                </value>
                <value>
                    <fullName>Mozu</fullName>
                </value>
                <value>
                    <fullName>MyCheck</fullName>
                </value>
                <value>
                    <fullName>NetSuite Suitecommerce</fullName>
                </value>
                <value>
                    <fullName>NetSuite Webstore</fullName>
                </value>
                <value>
                    <fullName>Novadine</fullName>
                </value>
                <value>
                    <fullName>Oracle ATG</fullName>
                </value>
                <value>
                    <fullName>RTR</fullName>
                </value>
                <value>
                    <fullName>SAP Hybris</fullName>
                </value>
                <value>
                    <fullName>Shopify</fullName>
                </value>
                <value>
                    <fullName>Tillster</fullName>
                </value>
                <value>
                    <fullName>Volusion</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Electronic_Filing_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Electronic Filing Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Engagement_Competitor_End_Date__c</fullName>
        <label>Engagement Competitor End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engagement_Competitor__c</fullName>
        <label>Engagement Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ATX</fullName>
                </value>
                <value>
                    <fullName>Caseware</fullName>
                </value>
                <value>
                    <fullName>Datafaction</fullName>
                </value>
                <value>
                    <fullName>Engagement CS</fullName>
                </value>
                <value>
                    <fullName>Engagement CSI</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>McGladrey</fullName>
                </value>
                <value>
                    <fullName>Miller</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PPC Electronic</fullName>
                </value>
                <value>
                    <fullName>PPC Engagement Manager</fullName>
                </value>
                <value>
                    <fullName>PPC Paper</fullName>
                </value>
                <value>
                    <fullName>Prosystem fx Engagement - CCH</fullName>
                </value>
                <value>
                    <fullName>Workpaper CS</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Engagement_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Engagement Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Enterprise_Name__c</fullName>
        <description>Used by TAA BI to group related account sites together at the company level</description>
        <label>Enterprise Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_Go_Live_Date_for_ERP__c</fullName>
        <label>Est Go Live Date for ERP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exclude_Account_Automation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this field is true then account automation will not process on the record.</inlineHelpText>
        <label>Exclude Account Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_from_RC_Call_List__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field it for the use of Professional Software only.</inlineHelpText>
        <label>Exclude from RC Call List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F1000_Rank__c</fullName>
        <description>D&amp;B F1000 annual rank for HQ, Sub and branch locations</description>
        <label>F1000 Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FED_STATE_DNC_DATE__c</fullName>
        <label>FED STATE DNC DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FED_STATE_DNC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FED STATE DNC</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>